Add existing file

--- a/currency.properties
+++ b/currency.properties
@@ -1,6 +1,7 @@
-#D = direct feed - eg. the currency pair can be looked up directly.
-#I = inverted (I) - eg. the currency pair can be looked up if base and terms are flipped (and rate = 1/rate)
-#U = 1:1 = unity - the rate is always 1.
+#Currency key/value pairs
+# D = direct feed - eg. the currency pair can be looked up directly.
+# I = inverted (I) - eg. the currency pair can be looked up if base and terms are flipped (and rate = 1/rate)
+# U = 1:1 = unity - the rate is always 1.
 
 
 AUDAUD=U
