--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.1</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -68,7 +68,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>2.4</version>
 				<configuration>
 				  <excludes>
 					<exclude>**/currency.properties</exclude>
@@ -87,7 +87,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.5.1</version>
+				<!-- <version>2.5.1</version> -->
 				<executions>
 				  <execution>
 					<id>copy-dependencies</id>
@@ -141,15 +141,15 @@
 									<limits>
 										<limit>
 											<counter>INSTRUCTION</counter>
-											<minimum>0.60</minimum>
-										</limit>
-										<limit>
-											<counter>METHOD</counter>
 											<minimum>0.70</minimum>
 										</limit>
 										<limit>
+											<counter>METHOD</counter>
+											<minimum>0.60</minimum>
+										</limit>
+										<limit>
 											<counter>BRANCH</counter>
-											<minimum>0.45</minimum>
+											<minimum>0.46</minimum>
 										</limit>
 									</limits>
 								</rule>
